// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`icons/general/IconMetadataColored should correctly render default icon 1`] = `
<AccessibleSVG
  className="icon-metadata "
  height={16}
  viewBox="0 0 16 16"
  width={16}
>
  <path
    className="fill-color"
    d="M8 16A8 8 0 1 1 8 0a8 8 0 0 1 0 16zm-2.515-5.879L6.2 7.263l1.376 2.202a.5.5 0 0 0 .848 0L9.8 7.263l.715 2.858a.5.5 0 0 0 .97-.242l-1-4a.5.5 0 0 0-.909-.144L8 8.257 6.424 5.735a.5.5 0 0 0-.91.144l-1 4a.5.5 0 0 0 .971.242z"
    fill="#0061d5"
    fillRule="evenodd"
  />
</AccessibleSVG>
`;

exports[`icons/general/IconMetadataColored should correctly render icon with custom color 1`] = `
<AccessibleSVG
  className="icon-metadata test"
  height={16}
  title="title"
  viewBox="0 0 16 16"
  width={160}
>
  <path
    className="fill-color"
    d="M8 16A8 8 0 1 1 8 0a8 8 0 0 1 0 16zm-2.515-5.879L6.2 7.263l1.376 2.202a.5.5 0 0 0 .848 0L9.8 7.263l.715 2.858a.5.5 0 0 0 .97-.242l-1-4a.5.5 0 0 0-.909-.144L8 8.257 6.424 5.735a.5.5 0 0 0-.91.144l-1 4a.5.5 0 0 0 .971.242z"
    fill="#00FF00"
    fillRule="evenodd"
  />
</AccessibleSVG>
`;

exports[`icons/general/IconMetadataColored should correctly render icon with specified props 1`] = `
<AccessibleSVG
  className="icon-metadata test"
  height={16}
  title="title"
  viewBox="0 0 16 16"
  width={160}
>
  <path
    className="fill-color"
    d="M8 16A8 8 0 1 1 8 0a8 8 0 0 1 0 16zm-2.515-5.879L6.2 7.263l1.376 2.202a.5.5 0 0 0 .848 0L9.8 7.263l.715 2.858a.5.5 0 0 0 .97-.242l-1-4a.5.5 0 0 0-.909-.144L8 8.257 6.424 5.735a.5.5 0 0 0-.91.144l-1 4a.5.5 0 0 0 .971.242z"
    fill="#0061d5"
    fillRule="evenodd"
  />
</AccessibleSVG>
`;

exports[`icons/general/IconMetadataColored should correctly render icon with type cascade 1`] = `
<AccessibleSVG
  className="icon-metadata test"
  height={16}
  title="title"
  viewBox="0 0 16 16"
  width={160}
>
  <path
    className="fill-color"
    d="M8 16A8 8 0 1 1 8 0a8 8 0 0 1 0 16zm-2.515-5.879L6.2 7.263l1.376 2.202a.5.5 0 0 0 .848 0L9.8 7.263l.715 2.858a.5.5 0 0 0 .97-.242l-1-4a.5.5 0 0 0-.909-.144L8 8.257 6.424 5.735a.5.5 0 0 0-.91.144l-1 4a.5.5 0 0 0 .971.242z"
    fill="#9f3fed"
    fillRule="evenodd"
  />
</AccessibleSVG>
`;

exports[`icons/general/IconMetadataColored should correctly render icon with type default 1`] = `
<AccessibleSVG
  className="icon-metadata test"
  height={16}
  title="title"
  viewBox="0 0 16 16"
  width={160}
>
  <path
    className="fill-color"
    d="M8 16A8 8 0 1 1 8 0a8 8 0 0 1 0 16zm-2.515-5.879L6.2 7.263l1.376 2.202a.5.5 0 0 0 .848 0L9.8 7.263l.715 2.858a.5.5 0 0 0 .97-.242l-1-4a.5.5 0 0 0-.909-.144L8 8.257 6.424 5.735a.5.5 0 0 0-.91.144l-1 4a.5.5 0 0 0 .971.242z"
    fill="#0061d5"
    fillRule="evenodd"
  />
</AccessibleSVG>
`;
